# qualyswas_pythonSDK

./: README.md  pyproject.toml
qualys_was_sdk/: QualysApi.py  QualysParser.py
